[package]
name = "kong_lib"
version = "0.0.20"
edition = "2021"

[lib]
name = "kong_lib"
crate-type = ["lib"]

[features]
local = []
staging = []
prod = []

[dependencies]
candid = "0.10.10"
ciborium = "0.2.2"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2"
ic-ledger-types = "0.15.0"
ic-cdk-macros = "0.18.5"
ic-stable-structures = "0.6.9"
icrc-ledger-types = "0.1.6"
num = "0.4.3"
num-rational = { version = "0.4.2", features = ["num-bigint"] }
num-bigint = "0.4.4"
num-traits = "0.2.19"
regex = "1.10.6"
serde = "1.0.210"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = "1.0.128"
